--- a/playlist/index.html
+++ b/playlist/index.html
@@ -30,7 +30,7 @@
               src: "https://mdtp-a.akamaihd.net/customers/akamai/video/VfE.mp4",
               type: "video/mp4"
             }],
-            poster: "/assets/img/bunny.jpg"
+            poster: "https://mdtp-a.akamaihd.net/amp-samples-assets/img/bunny.jpg"
           },
           {
             title: "OTT Frontline",
@@ -38,7 +38,7 @@
               src: "https://akamtrans-a.akamaihd.net/delivery/20/35/2035ef57-5cac-4d23-ab88-6366e9c24e6a/value-of-cmaf-in-the-drive-towards-ott-interoperability3d81e38c-2cad-336d-e2ee-4131c52ad3d4.m3u8",
               type: "application/x-mpegURL"
             }],
-            poster: "/assets/img/hd_world.jpg"
+            poster: "https://mdtp-a.akamaihd.net/amp-samples-assets/img/hd_world.jpg"
           },
           {
             title: "AMD HLS",
@@ -46,7 +46,7 @@
               src: "https://akamtrans-a.akamaihd.net/delivery/94/88/9488592c-0671-49ba-b1c1-d908418a629a/experience-the-edge3d81e38c-2cad-336d-e2ee-4131c52ad3d4.m3u8",
               type: "application/x-mpegURL"
             }],
-            poster: "/assets/img/elephant-dreams.jpg"
+            poster: "https://mdtp-a.akamaihd.net/amp-samples-assets/img/elephant-dreams.jpg"
           },
           {
             title: "BBB HLS",
@@ -54,7 +54,7 @@
               src: "https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8",
               type: "application/x-mpegURL"
             }],
-            poster: "/assets/img/bunny.jpg"
+            poster: "https://mdtp-a.akamaihd.net/amp-samples-assets/img/bunny.jpg"
           }
           ];
         function loadHandler(event) {
@@ -62,8 +62,8 @@
             plugins: {
               playlist: {
                 resources: [
-                  { src: "/assets/js/Playlist.js", debug: "/assets/js/Playlist.js", type: "text/javascript" },
-                  { src: "/assets/css/Playlist.css", debug: "/assets/css/Playlist.css", type: "text/css" }],
+                  { src: "https://mdtp-a.akamaihd.net/amp-samples-assets/js/Playlist.js", debug: "https://mdtp-a.akamaihd.net/amp-samples-assets/js/Playlist.js", type: "text/javascript" },
+                  { src: "https://mdtp-a.akamaihd.net/amp-samples-assets/css/Playlist.css", debug: "https://mdtp-a.akamaihd.net/amp-samples-assets/css/Playlist.css", type: "text/css" }],
                 autoadvance: {
                   enabled: true,
                   interval: 10
